--- a/index.html
+++ b/index.html
@@ -409,6 +409,26 @@
             </li>
           </ul>
         </div>
+        <div class="footer-form">
+          <p class="form-text">Subscription</p>
+          <form class="form">
+            <label for="subscription" class="subscription">
+              <input
+                class="input"
+                type="email"
+                name="subscription"
+                id="subscription"
+                placeholder="E-mail"
+              />
+            </label>
+            <button type="submit" class="submit">
+              Subscribe
+              <svg class="submit-link" width="24" height="24">
+                <use href="./images/icons.svg#icon-send"></use>
+              </svg>
+            </button>
+          </form>
+        </div>
       </div>
     </footer>
     <div class="backdrop is-hidden" data-modal>
@@ -418,6 +438,47 @@
             <use href="./images/icons.svg#close"></use>
           </svg>
         </button>
+        <p class="modal-text">Leave your contacts and we will call you back</p>
+        <form class="modal-form">
+          <div class="form-field">
+            <label for="user-name" class="label">Name</label>
+            <div class="form-icon">
+              <input type="text" name="user-name" id="user-name" />
+              <svg class="modal-svg" width="18" height="24">
+                <use href="./images/icons.svg#icon-name"></use>
+              </svg>
+            </div>
+          </div>
+          <div class="form-field">
+            <label for="phone">Phone</label>
+            <div class="form-icon">
+              <input type="tel" name="phone" id="phone" />
+              <svg class="modal-svg" width="18" height="24">
+                <use href="./images/icons.svg#icon-number"></use>
+              </svg>
+            </div>
+          </div>
+          <div class="form-field">
+            <label for="mail">Email</label>
+            <div class="form-icon">
+              <input type="email" name="mail" id="mail" />
+              <svg class="modal-svg" width="18" height="24">
+                <use href="./images/icons.svg#icon-mail"></use>
+              </svg>
+            </div>
+          </div>
+          <div class="form-field">
+            <label for="comment">Comments</label>
+            <textarea
+              name="comment"
+              id="comment"
+              cols="30"
+              rows="10"
+              placeholder="Text input"
+            ></textarea>
+          </div>
+          <button type="submit" class="modal-submit">Send</button>
+        </form>
       </div>
     </div>
     <script src="./modal.js"></script>
