--- a/index.html
+++ b/index.html
@@ -450,7 +450,7 @@
             </div>
           </div>
           <div class="form-field">
-            <label for="phone">Phone</label>
+            <label for="phone" class="label">Phone</label>
             <div class="form-icon">
               <input type="tel" name="phone" id="phone" />
               <svg class="modal-svg" width="18" height="24">
@@ -459,7 +459,7 @@
             </div>
           </div>
           <div class="form-field">
-            <label for="mail">Email</label>
+            <label for="mail" class="label">Email</label>
             <div class="form-icon">
               <input type="email" name="mail" id="mail" />
               <svg class="modal-svg" width="18" height="24">
@@ -468,7 +468,7 @@
             </div>
           </div>
           <div class="form-field">
-            <label for="comment">Comments</label>
+            <label for="comment" class="label">Comments</label>
             <textarea
               name="comment"
               id="comment"
@@ -476,6 +476,12 @@
               rows="10"
               placeholder="Text input"
             ></textarea>
+          </div>
+          <div class="conditions">
+            <input type="checkbox" name="terms" id="terms" />
+            <label for="terms" class="terms">
+              I accept the terms and conditions of the Privacy Policy</label
+            >
           </div>
           <button type="submit" class="modal-submit">Send</button>
         </form>
