--- a/index.html
+++ b/index.html
@@ -422,7 +422,7 @@
               />
             </label>
             <button type="submit" class="submit">
-              Subscribe
+              <p>Subscribe</p>
               <svg class="submit-link" width="24" height="24">
                 <use href="./images/icons.svg#icon-send"></use>
               </svg>
@@ -443,7 +443,12 @@
           <div class="form-field">
             <label for="user-name" class="label">Name</label>
             <div class="form-icon">
-              <input type="text" name="user-name" id="user-name" />
+              <input
+                type="text"
+                name="user-name"
+                id="user-name"
+                class="modal-input"
+              />
               <svg class="modal-svg" width="18" height="24">
                 <use href="./images/icons.svg#icon-name"></use>
               </svg>
@@ -452,7 +457,7 @@
           <div class="form-field">
             <label for="phone" class="label">Phone</label>
             <div class="form-icon">
-              <input type="tel" name="phone" id="phone" />
+              <input type="tel" name="phone" id="phone" class="modal-input" />
               <svg class="modal-svg" width="18" height="24">
                 <use href="./images/icons.svg#icon-number"></use>
               </svg>
@@ -461,14 +466,14 @@
           <div class="form-field">
             <label for="mail" class="label">Email</label>
             <div class="form-icon">
-              <input type="email" name="mail" id="mail" />
+              <input type="email" name="mail" id="mail" class="modal-input" />
               <svg class="modal-svg" width="18" height="24">
                 <use href="./images/icons.svg#icon-mail"></use>
               </svg>
             </div>
           </div>
           <div class="form-field comment">
-            <label for="-user-comment" class="label">Comments</label>
+            <label for="user-comment" class="label">Comment</label>
             <textarea
               class="textarea"
               name="user-comment"
