--- a/portfolio.html
+++ b/portfolio.html
@@ -318,7 +318,7 @@
           </ul>
         </div>
         <div class="footer-form">
-          <p class="form-text">Subscription</p>
+          <p class="form-text">Subscribe</p>
           <form class="form">
             <label for="subscription" class="subscription">
               <input
