--- a/index.html
+++ b/index.html
@@ -402,7 +402,7 @@
             </li>
             <li class="icon">
               <a href="" class="icon-link">
-                <svg class="icon-svg" width="24" height="24">
+                <svg class="icon-svg" width="24" height="24" class="send-svg">
                   <use href="./images/icons.svg#icon-linkedin2"></use>
                 </svg>
               </a>
