--- a/index.html
+++ b/index.html
@@ -402,7 +402,7 @@
             </li>
             <li class="icon">
               <a href="" class="icon-link">
-                <svg class="icon-svg" width="24" height="24" class="send-svg">
+                <svg class="icon-svg" width="24" height="24">
                   <use href="./images/icons.svg#icon-linkedin2"></use>
                 </svg>
               </a>
@@ -410,11 +410,11 @@
           </ul>
         </div>
         <div class="footer-form">
-          <p class="form-text">Subscription</p>
+          <p class="form-text">Subscribe</p>
           <form class="form">
             <label for="subscription" class="subscription">
               <input
-                class="input"
+                class="subscription-input"
                 type="email"
                 name="subscription"
                 id="subscription"
@@ -422,7 +422,7 @@
               />
             </label>
             <button type="submit" class="submit">
-              <p>Subscribe</p>
+              Subscribe
               <svg class="submit-link" width="24" height="24">
                 <use href="./images/icons.svg#icon-send"></use>
               </svg>
