--- a/index.html
+++ b/index.html
@@ -414,7 +414,7 @@
           <form class="form">
             <label for="subscription" class="subscription">
               <input
-                class="subscription-input"
+                class="sub-input"
                 type="email"
                 name="subscription"
                 id="subscription"
