--- a/portfolio.html
+++ b/portfolio.html
@@ -330,7 +330,7 @@
               />
             </label>
             <button type="submit" class="submit">
-              <p>Subscribe</p>
+              Subscribe
               <svg class="submit-link" width="24" height="24">
                 <use href="./images/icons.svg#icon-send"></use>
               </svg>
