--- a/portfolio.html
+++ b/portfolio.html
@@ -322,7 +322,7 @@
           <form class="form">
             <label for="subscription" class="subscription">
               <input
-                class="input"
+                class="sub-input"
                 type="email"
                 name="subscription"
                 id="subscription"
