--- a/index.html
+++ b/index.html
@@ -494,7 +494,7 @@
             <label for="user-privacy" class="terms">
               <span class="privacy">
                 <svg class="check-svg" width="10" height="8">
-                  <use href="./images/icons.svg#icon-checkbox-1"></use>
+                  <use href="./images/icons.svg#icon-check"></use>
                 </svg>
               </span>
               I accept the terms and conditions of the
